--- a/WebApplication1/Pages/Shared/_Layout.cshtml.css
+++ b/WebApplication1/Pages/Shared/_Layout.cshtml.css
@@ -1,5 +1,5 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify statiwec web assets. */
+for details on configuring this project to bundle and minify statiwec web aswewewsets. */
 
 a.navbar-brand {
   white-space: normal;
